# wavytune_cmake

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  azure-pipelines.yml  conanfile.py
analysis/: CMakeLists.txt  analysis.cpp
analysis/include/analysis/: analysis.hpp  hann_window.hpp
data_structures/: CMakeLists.txt
data_structures/include/data_structures/: byte_array.h  bytes.h
data_structures/source/: byte_array.cpp  bytes.cpp
docker/: Dockerfile
fourier/: CMakeLists.txt
fourier/include/fourier/: dft.h  dft_operations.h  matrix.h  matrix_exception.h  matrix_row.h  matrix_traits.h  sft.h
fourier/source/: dft_operations.cpp  fourier.cpp
fourier/src/: dft_operations.cpp  fourier.cpp
graphics/: CMakeLists.txt  Camera.cpp  Shader.cpp  ShaderProgram.cpp  concrete_renderer.cpp  draw_buffer.cpp  window.cpp
graphics/include/graphics/: Camera.h  Shader.h  ShaderProgram.h  abstract_renderer.hpp  concrete_renderer.hpp  draw_buffer.hpp  window.h
helpers/: conan-install-ubuntu-debug.sh  lint-shell.sh
helpers/conan/: conan-install-ubuntu-debug.sh  install-ubuntu.sh
helpers/conan/profiles/: x86_64_gcc7_ubuntu_debug  x86_64_gcc7_ubuntu_release  x86_64_msvc_windows_debug
matrix/: CMakeLists.txt  matrix.cpp
matrix/include/matrix/: matrix.h  matrix_exception.h  matrix_row.h  matrix_traits.h
shaders/: CMakeLists.txt  abstract_shader.cpp  compile_shaders.py  fs.glsl  shader_builder.cpp  shader_program.cpp  vs.glsl  vs_test.glsl
shaders/include/shaders/: abstract_shader.h  abstract_shader.hpp  fragment_shader.h  geometry_shader.h  shader.h  shader_builder.h  shader_program.h  vertex_shader.h
source/: main.cpp
tests/: CMakeLists.txt  byte_array_tests.cpp  matrix_test.cpp
wavy_tune/: CMakeLists.txt  audio.cpp  audio.hpp  camera.hpp  cube.hpp  main.cpp  window.cpp  window.hpp
